[impl-NA] Extract Feed, Add Coupon Select Menus & Tab Navigation

--- a/promopay/www/views/app/side-menu.html
+++ b/promopay/www/views/app/side-menu.html
@@ -17,17 +17,13 @@
         <div class="row menu-top-options">
           <div class="col col-top">
             <ion-list>
-              <ion-item ui-sref-active="active" class="item-icon-left" menu-close ui-sref="app.feed">
-                <i class="menu-icon icon ion-ios-world"></i>
-                <h2 class="menu-text">Feed</h2>
-              </ion-item>
               <ion-item ui-sref-active="active" class="item-icon-left" menu-close ui-sref="app.shop.home">
                 <i class="menu-icon icon ion-bag"></i>
-                <h2 class="menu-text">Shop</h2>
+                <h2 class="menu-text">All Coupons</h2>
               </ion-item>
               <ion-item ui-sref-active="active" class="item-icon-left" menu-close ui-sref="app.cart">
                 <i class="menu-icon icon ion-ios-cart"></i>
-                <h2 class="menu-text">Shopping cart</h2>
+                <h2 class="menu-text">Selected Coupons</h2>
               </ion-item>
             </ion-list>
           </div>
@@ -48,9 +44,9 @@
                   <span class="inbox-unread">13</span>
                 </div>
               </ion-item>
-              <ion-item class="full-width-item" menu-close ui-sref="app.shop.sale">
+              <ion-item class="full-width-item" menu-close ui-sref="app.shop">
                 <button class="button button-full button-positive">
-                  Season Sale!
+                  Clear Expired Coupons
                 </button>
               </ion-item>
             </ion-list>
