--- a/promopay/www/views/app/shop/shop-sale.html
+++ b/promopay/www/views/app/shop/shop-sale.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Shop" class="shop-sale-view">
+<ion-view view-title="Promopay" class="shop-sale-view">
   <ion-content>
     <div class="row shop-products-narrow-cards-outer">
       <div ng-repeat="product in products" class="col col-50 shop-product-narrow-card" ui-sref="app.product-detail({productId: product._id})">
