--- a/promopay/www/views/app/shop/shop-sale.html
+++ b/promopay/www/views/app/shop/shop-sale.html
@@ -10,7 +10,7 @@
           </div>
           <div class="item item-body">
             <h2 class="card-title">{{product.title}}</h2>
-            <p class="card-description"><b>${{product.price}}</b> - {{product.description}}</p>
+            <p class="card-description"><b>€{{product.price}}</b> - {{product.description}}</p>
           </div>
         </div>
       </div>
