--- a/promopay/www/views/app/shop/shop-home.html
+++ b/promopay/www/views/app/shop/shop-home.html
@@ -1,7 +1,7 @@
 <ion-view view-title="Promopay" class="shop-home-view">
   <ion-content>
     <div class="list shop-home-options-list">
-      <a class="item shop-home-option-item" ui-sref="app.shop.sale">
+      <a class="item shop-home-option-item" ui-sref="app.cart">
         <div class="row">
           <div class="col">
             <pre-img ratio="_2_1" helper-class="shop-home-option-image-outer">
@@ -12,7 +12,7 @@
         </div>
         <div class="row option-copy">
           <div class="col col-75">
-            <span>Shop Now</span>
+            <span>See Your Selected Coupons</span>
           </div>
           <div class="col col-25 option-icon">
             <i class="icon ion-chevron-right"></i>
@@ -21,8 +21,8 @@
       </a>
     </div>
     <div class="item item-divider shop-section-title">
-      <span class="title-copy">Popular Now</span>
-      <a class="button button-small button-dark section-action" ui-sref="app.shop.popular">More</a>
+      <span class="title-copy">Latest Coupons For You</span>
+      <a class="button button-small button-dark section-action" ui-sref="app.shop.popular">See All Coupons</a>
     </div>
     <div class="row shop-products-narrow-cards-outer shop-product-cards-scroller">
       <div ng-repeat="product in popular_products" class="col col-50 shop-product-narrow-card" ui-sref="app.product-detail({productId: product._id})">
@@ -34,7 +34,7 @@
           </div>
           <div class="item item-body">
             <h2 class="card-title">{{product.title}}</h2>
-            <p class="card-description"><b>${{product.price}}</b> - {{product.description}}</p>
+            <p class="card-description"><b>You Save: €{{product.price}}</b> - {{product.description}}</p>
           </div>
         </div>
       </div>
