--- a/promopay/www/views/app/shop/shop-popular.html
+++ b/promopay/www/views/app/shop/shop-popular.html
@@ -1,5 +1,13 @@
 <ion-view view-title="Promopay" class="shop-popular-view">
   <ion-content>
+   <div id="search-bar">
+      <div class="item item-input-inset">
+        <label class="item-input-wrapper" id="search-input">
+          <i class="icon ion-search placeholder-icon"></i>
+          <input type="text" placeholder="Search" ng-model="query" ng-change="search()">
+        </label>
+    </div>
+    </div>
     <div class="row shop-products-narrow-cards-outer">
       <div ng-repeat="product in products" class="col col-50 shop-product-narrow-card" ui-sref="app.product-detail({productId: product._id})">
         <div class="list card">
@@ -10,7 +18,7 @@
           </div>
           <div class="item item-body">
             <h2 class="card-title">{{product.title}}</h2>
-            <p class="card-description"><b>${{product.price}}</b> - {{product.description}}</p>
+            <p class="card-description"><b>€{{product.price}}</b> - {{product.description}}</p>
           </div>
         </div>
       </div>
