--- a/promopay/www/views/app/shop/shop.html
+++ b/promopay/www/views/app/shop/shop.html
@@ -1,12 +1,12 @@
 <ion-view view-title="Promopay" class="shop-view">
   <ion-tabs class="tabs-icon-top tabs-striped tabs-background-balanced tabs-color-light shop-tabs">
-    <ion-tab title="New Coupons" icon-on="ion-ios-pulse-strong" icon-off="ion-ios-pulse" ui-sref="app.shop.popular">
-      <ion-nav-view name="shop-popular"></ion-nav-view>
-    </ion-tab>
     <ion-tab title="Home" icon-on="ion-ios-home" icon-off="ion-ios-home-outline" ui-sref="app.shop.home">
       <ion-nav-view name="shop-home"></ion-nav-view>
     </ion-tab>
-    <ion-tab title="History" icon-on="ion-ios-pricetags" icon-off="ion-ios-pricetags-outline" ui-sref="app.shop.sale">
+    <ion-tab title="Selected Coupons" icon-on="ion-ios-pricetags" icon-off="ion-ios-pricetags-outline" ui-sref="app.shop.popular">
+      <ion-nav-view name="shop-popular"></ion-nav-view>
+    </ion-tab>
+    <ion-tab title="History" icon-on="ion-ios-trash" icon-off="ion-ios-trash-outline" ui-sref="app.shop.sale">
       <ion-nav-view name="shop-sale"></ion-nav-view>
     </ion-tab>
   </ion-tabs>
