--- a/promopay/www/views/app/side-menu.html
+++ b/promopay/www/views/app/side-menu.html
@@ -44,8 +44,8 @@
                   <span class="inbox-unread">13</span>
                 </div>
               </ion-item>
-              <ion-item class="full-width-item" menu-close ui-sref="app.shop">
-                <button class="button button-full button-positive">
+              <ion-item class="full-width-item" menu-close ui-sref="app.shop.home">
+                <button class="button button-full button-assertive">
                   Clear Expired Coupons
                 </button>
               </ion-item>
