--- a/promopay/www/views/auth/dont-have-facebook.html
+++ b/promopay/www/views/auth/dont-have-facebook.html
@@ -3,7 +3,7 @@
     <ion-nav-back-button>
     </ion-nav-back-button>
     <ion-nav-buttons side="right">
-      <a class="button button-clear button-light" ui-sref="app.feed">
+      <a class="button button-clear button-light" ui-sref="app.shop.home">
         Skip
       </a>
     </ion-nav-buttons>
