--- a/promopay/www/views/app/shop/shop-popular.html
+++ b/promopay/www/views/app/shop/shop-popular.html
@@ -1,13 +1,15 @@
 <ion-view view-title="Promopay" class="shop-popular-view">
+  <ion-nav-buttons side="secondary">
+    <button class="button button-icon icon ion-ios-search-strong" ng-click="showFilterBar()">
+    </button>
+  </ion-nav-buttons>
   <ion-content>
-   <div id="search-bar">
-      <div class="item item-input-inset">
-        <label class="item-input-wrapper" id="search-input">
-          <i class="icon ion-search placeholder-icon"></i>
-          <input type="text" placeholder="Search" ng-model="query" ng-change="search()">
-        </label>
-    </div>
-    </div>
+
+    <!-- Pull To Get New -->
+    <ion-refresher pulling-text="Pull to refresh..." on-refresh="getNewData()"></ion-refresher>
+    <!-- /Pull To Get New -->
+
+    <!-- Content -->
     <div class="row shop-products-narrow-cards-outer">
       <div ng-repeat="product in products" class="col col-50 shop-product-narrow-card" ui-sref="app.product-detail({productId: product._id})">
         <div class="list card">
@@ -23,5 +25,11 @@
         </div>
       </div>
     </div>
+    <!-- /Content -->
+
+    <!-- Infinit scroll -->
+    <ion-infinite-scroll ng-if="moreDataCanBeLoaded()" on-infinite="loadMoreData()" distance="2%"></ion-infinite-scroll>
+    <!-- /Infinit scroll -->
+
   </ion-content>
 </ion-view>
