--- a/promopay/www/views/app/shop/shop.html
+++ b/promopay/www/views/app/shop/shop.html
@@ -3,7 +3,7 @@
     <ion-tab title="Home" icon-on="ion-ios-home" icon-off="ion-ios-home-outline" ui-sref="app.shop.home">
       <ion-nav-view name="shop-home"></ion-nav-view>
     </ion-tab>
-    <ion-tab title="Selected Coupons" icon-on="ion-ios-pricetags" icon-off="ion-ios-pricetags-outline" ui-sref="app.shop.popular">
+    <ion-tab title="All Coupons" icon-on="ion-ios-pricetags" icon-off="ion-ios-pricetags-outline" ui-sref="app.shop.popular">
       <ion-nav-view name="shop-popular"></ion-nav-view>
     </ion-tab>
     <ion-tab title="History" icon-on="ion-ios-trash" icon-off="ion-ios-trash-outline" ui-sref="app.shop.sale">
