--- a/promopay/www/views/auth/create-account.html
+++ b/promopay/www/views/auth/create-account.html
@@ -9,8 +9,8 @@
         <h1 class="form-title">Create your account</h1>
         <h3 class="form-sub-title">Sign up with Social Network or Email</h3>
         <div class="social-sign-up button-bar">
-          <a class="button icon ion-social-facebook button-positive"></a>
-          <a class="button icon ion-social-twitter button-calm"></a>
+          <a class="button icon ion-social-facebook button-positive" ng-click="facebookSignIn()"></a>
+          <a class="button icon ion-social-twitter button-calm" ng-click="twitterSignIn()"></a>
         </div>
       </div>
     </div>
