--- a/promopay/www/views/app/shop/cart.html
+++ b/promopay/www/views/app/shop/cart.html
@@ -20,24 +20,8 @@
                 </pre-img>
               </div>
               <div class="product-options-wrapper">
-                <!-- <div class="row product-options">
-                  <div class="col col-75 select-option">
-                    <select >
-                      <option value="1">Shiny Black Gold</option>
-                      <option value="2">Black Ice Revo</option>
-                      <option value="3">Black Silver</option>
-                    </select>
-                  </div>
-                  <div class="col col-25 select-option">
-                    <select >
-                      <option ng-repeat="i in [1,2,3,4,5,6,7,8,9,10]" value="{{i}}">{{i}}</option>
-                    </select>
-                  </div>
-                </div> -->
                 <div class="row remove-product-wrapper">
                   <div class="col col-center col-75">
-                    <!-- <span class="remove-product-button" ng-click="removeProductFromCart({{product}})">Remove</span> -->
-                    <!-- <span class="remove-product-button" ng-click="removeProductFromCart(product)">Remove</span> -->
                     <button class="button button-clear button-small button-assertive remove-product-button" ng-click="removeProductFromCart(product)">
                       Remove Coupon
                     </button>
@@ -45,6 +29,13 @@
                   <div class="col col-center col-25">
                     <span class="product-price">Value of Coupon - €{{product.price}}</span>
                   </div>
+                </div>
+                <div class="row padding">
+                    <div class="col col-center col-100">
+                      <button class="button button-block button-energized checkout-btn" ui-sref="app.product-detail({productId: product._id})">
+                        Open This Coupon
+                      </button>
+                    </div>
                 </div>
               </div>
             </div>
@@ -55,11 +46,6 @@
         <span class="title-copy">Total Value Of Your Coupons</span>
         <span class="checkout-total-price section-action">€{{ getSubtotal() }}</span>
       </div>
-      <!-- <div class="row padding">
-        <button class="button button-block button-energized checkout-btn" ui-sref="app.shipping-address">
-          Continue to Checkout
-        </button>
-      </div> -->
     </div>
   </ion-content>
 </ion-view>
