--- a/promopay/www/views/auth/dont-have-facebook.html
+++ b/promopay/www/views/auth/dont-have-facebook.html
@@ -2,23 +2,18 @@
   <ion-nav-bar>
     <ion-nav-back-button>
     </ion-nav-back-button>
-    <ion-nav-buttons side="right">
-      <a class="button button-clear button-light" ui-sref="app.shop.home">
-        Skip
-      </a>
-    </ion-nav-buttons>
   </ion-nav-bar>
   <ion-content scroll="false">
     <!-- <div multi-bg="['http://lorempixel.com/640/1136?1']" interval="3000" helper-class="no-facebook-welcome-bg"> -->
     <!-- <div multi-bg="['http://i.giphy.com/tKX6FNU9UGwF2.gif']" interval="3000" helper-class="no-facebook-welcome-bg"> -->
     <!-- <div multi-bg="['http://i.giphy.com/13f7pejozPXuta.gif']" interval="3000" helper-class="no-facebook-welcome-bg"> -->
-    <div multi-bg="['img/giphy-bg-2.gif']" interval="3000" helper-class="no-facebook-welcome-bg">
+    <div multi-bg="['img/s.4.jpg']" interval="0" helper-class="no-facebook-welcome-bg">
     <!-- <div multi-bg="['img/giphy-bg.gif']" interval="3000" helper-class="no-facebook-welcome-bg"> -->
       <div class="top-content row">
         <div class="app-copy col col-center">
-          <h1 class="app-logo">logo</h1>
+          <h1 class="app-logo">PromoPay</h1>
           <p class="app-tagline">
-            Your tag line
+            Be Amazing
           </p>
         </div>
       </div>
