FB Sign In no App, Twiiter APp Key, Filter BAr, User Profile Tracking, JSON API

--- a/promopay/www/views/auth/create-account.html
+++ b/promopay/www/views/auth/create-account.html
@@ -41,6 +41,9 @@
             <label class="item item-input">
               <input type="tel" placeholder="Phone Number" name="phone" ng-model="user.phone" required>
             </label>
+            <label class="item item-input">
+              <input type="number" placeholder="Age" name="age" ng-model="user.age" required>
+            </label>
             <label class="item item-input" show-hide-container>
               <input type="password" placeholder="Password" name="password" ng-model="user.password" required show-hide-input>
             </label>
