--- a/promopay/www/views/auth/welcome-back.html
+++ b/promopay/www/views/auth/welcome-back.html
@@ -2,6 +2,11 @@
   <ion-nav-bar class="view-navigation">
     <ion-nav-back-button>
     </ion-nav-back-button>
+    <ion-nav-buttons side="right">
+      <a class="button button-clear button-light" ui-sref="app.shop.home">
+        Skip
+      </a>
+    </ion-nav-buttons>
   </ion-nav-bar>
   <ion-content class="padding">
     <div class="row form-heading">
