--- a/promopay/www/views/app/shop/shop-popular.html
+++ b/promopay/www/views/app/shop/shop-popular.html
@@ -11,7 +11,7 @@
 
     <!-- Content -->
     <div class="row shop-products-narrow-cards-outer">
-      <div ng-repeat="product in products" ng-if="product.expired === false" class="col col-50 shop-product-narrow-card" ui-sref="app.product-detail({productId: product._id})">
+      <div ng-repeat="product in products" track by $index ng-if="product.expired === false" class="col col-50 shop-product-narrow-card" ui-sref="app.product-detail({productId: product._id})">
         <div class="list card">
           <div class="item item-image">
             <pre-img ratio="_1_1" helper-class="main-image">
