--- a/promopay/www/views/auth/dont-have-facebook.html
+++ b/promopay/www/views/auth/dont-have-facebook.html
@@ -2,6 +2,11 @@
   <ion-nav-bar>
     <ion-nav-back-button>
     </ion-nav-back-button>
+    <ion-nav-buttons side="right">
+      <a class="button button-clear button-light" ui-sref="app.shop.home">
+        Skip
+      </a>
+    </ion-nav-buttons>
   </ion-nav-bar>
   <ion-content scroll="false">
     <!-- <div multi-bg="['http://lorempixel.com/640/1136?1']" interval="3000" helper-class="no-facebook-welcome-bg"> -->
