--- a/promopay/www/views/auth/create-account.html
+++ b/promopay/www/views/auth/create-account.html
@@ -47,7 +47,7 @@
             <label class="item item-input" show-hide-container>
               <input type="password" placeholder="Password" name="password" ng-model="user.password" required show-hide-input>
             </label>
-            <button type="submit" class="sign-up button button-block" ng-click="doSignUp()" ng-disabled="signup_form.$invalid">
+            <button type="submit" class="sign-up button button-block" ng-click="doSignUp(user)" ng-disabled="signup_form.$invalid">
               Sign Up
             </button>
             <p ng-show="error" class="message error">{{error}}</p>
