[impl-NA] Implement log back in and request offerImpressions for exisitng users

--- a/promopay/www/views/app/shop/partials/add-to-cart-popup.html
+++ b/promopay/www/views/app/shop/partials/add-to-cart-popup.html
@@ -1,3 +1,3 @@
-<span class="popup-product-title">{{data.product.title}}</span>
-<span class="popup-product-price">Coupon Value - {{data.product.price}}</span>
+<span class="popup-product-title">{{data.product.offer.h1}}</span>
+<span class="popup-product-price">Coupon Value - {{data.product.offer.val}}</span>
 <div class="separator-line"></div>
