--- a/promopay/www/views/app/side-menu.html
+++ b/promopay/www/views/app/side-menu.html
@@ -45,7 +45,7 @@
                 </div>
               </ion-item>
               <ion-item class="full-width-item" menu-close ui-sref="app.shop.home">
-                <button class="button button-full button-assertive">
+                <button class="button button-full button-assertive" ng-click="clearCoupons()">
                   Clear Expired Coupons
                 </button>
               </ion-item>
