--- a/promopay/www/views/auth/dont-have-facebook.html
+++ b/promopay/www/views/auth/dont-have-facebook.html
@@ -24,11 +24,11 @@
       </div>
       <div class="bottom-content row">
         <div class="col col-bottom">
-          <a class="create-account button-large button button-block" ui-sref="create-account">
-            Create an account
+          <a class="create-account button-large button button-block" ui-sref="welcome-back">
+            Log In
           </a>
-          <a class="have-account button button-clear button-block" ui-sref="welcome-back">
-            Already have an account?
+          <a class="have-account button button-clear button-block" ui-sref="create-account">
+            Create an account
           </a>
           <section ng-include="'views/app/legal/legal-notice.html'"></section>
         </div>
