--- a/promopay/www/views/app/shop/cart.html
+++ b/promopay/www/views/app/shop/cart.html
@@ -10,13 +10,13 @@
       <div class="products-list">
         <div class="product-list-item" ng-repeat="product in products">
           <div class="row product-title-wrapper">
-            <span class="product-title">{{product.title}}</span>
+            <span class="product-title">{{product.offer.h1}}</span>
           </div>
           <div class="row product-content-wrapper">
             <div class="col">
               <div class="product-picture">
                 <pre-img ratio="_1_1" helper-class="main-image">
-                  <img ng-src="{{product.picture}}" spinner-on-load>
+                  <img ng-src="img/sample_images/products/2.jpeg" spinner-on-load>
                 </pre-img>
               </div>
               <div class="product-options-wrapper">
@@ -27,12 +27,12 @@
                     </button>
                   </div>
                   <div class="col col-center col-25">
-                    <span class="product-price">Value of Coupon - €{{product.price}}</span>
+                    <span class="product-price">Value: €{{product.offer.val}}</span>
                   </div>
                 </div>
                 <div class="row padding">
                     <div class="col col-center col-100">
-                      <button class="button button-block button-energized checkout-btn" ui-sref="app.product-detail({productId: product._id})">
+                      <button class="button button-block button-energized checkout-btn" ui-sref="app.product-detail({productId: product.id})">
                         Open This Coupon
                       </button>
                     </div>
