--- a/promopay/www/views/app/shop/shop-sale.html
+++ b/promopay/www/views/app/shop/shop-sale.html
@@ -1,16 +1,17 @@
 <ion-view view-title="Promopay" class="shop-sale-view">
   <ion-content>
     <div class="row shop-products-narrow-cards-outer">
-      <div ng-repeat="product in products" ng-if="product.expired === true" class="col col-50 shop-product-narrow-card" ui-sref="app.product-detail({productId: product._id})">
+      <li ng-show="!products.length">You have no coupons yet!</li>
+      <div ng-repeat="product in products" class="col col-50 shop-product-narrow-card" ui-sref="app.product-detail({productId: product._id})">
         <div class="list card">
           <div class="item item-image">
             <pre-img ratio="_1_1" helper-class="main-image">
-              <img ng-src="{{product.picture}}" spinner-on-load>
+              <img ng-src="img/sample_images/products/2.jpeg" spinner-on-load>
             </pre-img>
           </div>
           <div class="item item-body">
-            <h2 class="card-title">{{product.title}}</h2>
-            <p class="card-description"><b>€{{product.price}}</b> - {{product.description}}</p>
+            <h2 class="card-title">{{product.offer.h1}}</h2>
+            <p class="card-description"><b>€{{product.offer.val}}</b> - {{product.offer.h2}}</p>
           </div>
         </div>
       </div>
