--- a/promopay/www/views/auth/welcome-back.html
+++ b/promopay/www/views/auth/welcome-back.html
@@ -14,8 +14,8 @@
         <h1 class="form-title">Welcome back</h1>
         <h3 class="form-sub-title">Login to your account to start</h3>
         <div class="social-sign-up button-bar">
-          <a class="button icon ion-social-facebook button-positive"></a>
-          <a class="button icon ion-social-twitter button-calm"></a>
+          <a class="button icon ion-social-facebook button-positive" ng-click="facebookSignIn()"></a>
+          <a class="button icon ion-social-twitter button-calm" ng-click="twitterSignIn()"></a>
         </div>
       </div>
     </div>
@@ -34,7 +34,7 @@
             <label class="item item-input" show-hide-container>
               <input type="password" placeholder="Password" name="password" ng-model="user.password" required show-hide-input>
             </label>
-            <button type="submit" class="login button button-block" ng-click="doLogIn()" ng-disabled="login_form.$invalid">
+            <button type="submit" class="login button button-block" ng-click="doLogIn(user)" ng-disabled="login_form.$invalid">
               Login
             </button>
             <p ng-show="error" class="message error">{{error}}</p>
