--- a/promopay/www/views/app/shop/product-detail.html
+++ b/promopay/www/views/app/shop/product-detail.html
@@ -15,32 +15,14 @@
           <p class="product-like"><i></i>You Save:</p>
           <p class="likes"><i class="icon ion-social-euro"></i> {{product.offer.val}}</p>
         </div>
-        <p class="product-price" ng-click="showAddToCartPopup(product)">Add Coupon</p>
+        <p class="product-price" ng-click="showAddToCartPopup(product)">Create Voucher</p>
       </div>
       <div class="item item-body">
         <p class="product-description">{{product.offer.h2}}</p>
         <p class="product-description">
             <strong>Coupon Barcode</strong></br>
         </p>
-        <barcode type="{{product.type}}" string="{{product.code}}" options="vm.options" ></barcode><br>
-      </div>
-    </div>
-    <div class="item item-divider shop-section-title">
-      <span class="title-copy">Related Coupons</span>
-    </div>
-    <div class="row shop-products-narrow-cards-outer shop-product-cards-scroller">
-      <div ng-repeat="related_product in product.related_products" class="col col-50 shop-product-narrow-card" ui-sref="app.product-detail({productId: related_product._id})">
-        <div class="list card">
-          <div class="item item-image">
-            <pre-img ratio="_1_1" helper-class="main-image">
-              <img ng-src="{{related_product.picture}}" spinner-on-load>
-            </pre-img>
-          </div>
-          <div class="item item-body">
-            <h2 class="card-title">{{related_product.title}}</h2>
-            <p class="card-description"><b>You Save: €{{related_product.price}}</b> - {{related_product.description}}</p>
-          </div>
-        </div>
+        <barcode type="code128b" render="img" string="{{product.vchr.bcodes[2].b}}" options="vm.options" ></barcode><br>
       </div>
     </div>
   </ion-content>
