--- a/promopay/www/views/app/shop/shop-sale.html
+++ b/promopay/www/views/app/shop/shop-sale.html
@@ -2,7 +2,7 @@
   <ion-content>
     <div class="row shop-products-narrow-cards-outer">
       <li ng-show="!products.length">You have no coupons yet!</li>
-      <div ng-repeat="product in products" class="col col-50 shop-product-narrow-card" ui-sref="app.product-detail({productId: product._id})">
+      <div ng-repeat="product in products" ng-if="product.vchr.spends.length > 0" class="col col-50 shop-product-narrow-card" ui-sref="app.product-detail({productId: product._id})">
         <div class="list card">
           <div class="item item-image">
             <pre-img ratio="_1_1" helper-class="main-image">
