--- a/promopay/scss/shop/shop-cards.styles.scss
+++ b/promopay/scss/shop/shop-cards.styles.scss
@@ -6,7 +6,7 @@
 
   .shop-product-narrow-card
   {
-    padding: 0px;
+    padding: 0 0 0 -1px;
     margin-bottom: $shop-product-narrow-card-outer-padding;
 
     &:nth-child(odd)
