--- a/promopay/www/views/app/shop/shop-popular.html
+++ b/promopay/www/views/app/shop/shop-popular.html
@@ -26,7 +26,7 @@
               Voucher
             </button>
             <button ng-if="product.vchr === null" class="button button-block button-balanced" ui-sref="app.product-detail({productId: product.id, productTitle: product.offer.val})">
-              Coupon
+              Offer
             </button>
           </div>
         </div>
