[impl-NA] Fix Cart Btn CSS

--- a/promopay/www/views/app/shop/cart.html
+++ b/promopay/www/views/app/shop/cart.html
@@ -30,7 +30,7 @@
                     <span class="product-price">Value: €{{product.offer.val}}</span>
                   </div>
                 </div>
-                <div class="row padding">
+                <div class="row remove-product-wrapper">
                     <div class="col col-center col-100">
                       <button class="button button-block button-energized checkout-btn" ui-sref="app.product-detail({productId: product.id})">
                         Open This Coupon
