[impl-NA] Implement QR Code, Human readable barcode, redefine List view HTMl & iOS build

--- a/promopay/scss/shop/product-details.styles.scss
+++ b/promopay/scss/shop/product-details.styles.scss
@@ -51,6 +51,29 @@ ion-nav-bar
     margin-top: 0px;
   }
 
+	.item-select
+	{
+		margin-bottom: 30px;
+	}
+
+  .barcodes
+  {
+      .qr-code
+      {
+
+      }
+
+      .machine-code
+      {
+
+      }
+
+      .human-code
+      {
+        
+      }
+  }
+
   .product-like
   {
     .icon
