[Impl-N/A] Implment list view HTML as opposed to single div blocks, refractor singlengImage item to show as a background image to hold scale

--- a/promopay/scss/shop/shop.styles.scss
+++ b/promopay/scss/shop/shop.styles.scss
@@ -64,3 +64,10 @@ ion-nav-bar
 		padding-bottom: 0px;
 	}
 }
+
+.list-image
+{
+	background-position: center;
+	background-repeat: no-repeat;
+	background-size: cover;
+}
